RESOLVED FIXED21243
HTMLMediaElement loopstart and loopend defaults are incorrect
https://bugs.webkit.org/show_bug.cgi?id=21243
Summary HTMLMediaElement loopstart and loopend defaults are incorrect
Eric Carlson
Reported 2008-09-30 10:28:26 PDT
HTML5 spec says "The default value of the loopstart content attribute is the value of the start DOM attribute" and "The default value of the loopend content attribute is the value of the end DOM attribute". WebKit currently defaults to 0 and infinity.
Attachments
proposed patch (10.17 KB, patch)
2008-09-30 10:37 PDT, Eric Carlson
koivisto: review+
Eric Carlson
Comment 1 2008-09-30 10:37:23 PDT
Created attachment 23943 [details] proposed patch
Antti Koivisto
Comment 2 2008-09-30 22:03:26 PDT
looks good
Andrew Wellington
Comment 3 2008-10-12 17:35:07 PDT
Landed by Eric Carlson in r37136
Note You need to log in before you can comment on or make changes to this bug.