2008-09-30  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Antti

        https://bugs.webkit.org/show_bug.cgi?id=21243

        Fix loopstart and loopend default values.

        Tests: media/loopend-limits.html
               media/loopstart-limits.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::loopStart): the spec says start() is the default value
        (WebCore::HTMLMediaElement::loopEnd): the spec says end() is the default value

2008-09-30  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Antti

        https://bugs.webkit.org/show_bug.cgi?id=21243

        Test default loopstart and loopend values.

        * media/loopend-limits-expected.txt: Added.
        * media/loopend-limits.html: Added.
        * media/loopstart-limits-expected.txt: Added.
        * media/loopstart-limits.html: Added.
        * media/video-test.js:



Canonical link: https://commits.webkit.org/29397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37136 268f45cc-cd09-0410-ab3c-d52691b4dbfc